; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/arswitch/extr_arswitch.c_arswitch_setvgroup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/arswitch/extr_arswitch.c_arswitch_setvgroup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arswitch_softc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (%struct.arswitch_softc.0*, i32*)* }
%struct.arswitch_softc.0 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @arswitch_setvgroup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arswitch_setvgroup(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.arswitch_softc*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.arswitch_softc* @device_get_softc(i32 %6)
  store %struct.arswitch_softc* %7, %struct.arswitch_softc** %5, align 8
  %8 = load %struct.arswitch_softc*, %struct.arswitch_softc** %5, align 8
  %9 = getelementptr inbounds %struct.arswitch_softc, %struct.arswitch_softc* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32 (%struct.arswitch_softc.0*, i32*)*, i32 (%struct.arswitch_softc.0*, i32*)** %10, align 8
  %12 = load %struct.arswitch_softc*, %struct.arswitch_softc** %5, align 8
  %13 = bitcast %struct.arswitch_softc* %12 to %struct.arswitch_softc.0*
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 %11(%struct.arswitch_softc.0* %13, i32* %14)
  ret i32 %15
}

declare dso_local %struct.arswitch_softc* @device_get_softc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
